Modified "sizeX" and "sizeY" options are able to be accepted percentage string & "auto" keyword

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 $(function () {
 
 new BackgroundSizeFallback({
-	test: true,
+	//test: true,
 	el: '.page',
-	minWidth: 1600,
-	minHeight: 1200
+	sizeX: '100%',
+	sizeY: '100%'
 });
 
 });
