Fixed image ratio bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 $(function () {
 
 new BackgroundSizeFallback({
-	//test: true,
+	test: true,
+	fullscreen: false,
 	el: '.page',
 	sizeX: '100%',
 	sizeY: '100%'
